<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NASA Crop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    
    <string name="experiences">experiences</string>
    
   
    <string name="register">Submit</string>
    
       
          
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="select_your_city">Select your City</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_experience_in_years">Enter Experience in years</string>
    <string name="enter_rate_per_day">Enter Rate Per Day</string>
    <string name="save">Clear</string>
    <string name="login">Login</string>
    
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contact_list">Contacts Listing</string>
	<string name="actionbar_activity_not_found">Failed to open screen</string>
	<string name="searchTxt">Search...</string>
    <string name="forgot_password">Forgot Password</string>
    
    
    
    <string-array name="city_array">
        	<item> Select Your City</item>
            <item >Banglore</item>
            <item >More Cities Coming Soon</item>
            
    </string-array>
    
	<string-array name="banglore_areas">
	    	<item> Select Your Area</item>
            <item >Marathalli</item>
            <item >Jaya Nagar</item>
            <item >Electronic City</item>
            <item >Kemp Gowda</item>
            <item>Lal Bag</item>
            <item> More Areas Coming Soon</item>
    </string-array>
	
    <string-array name="services">
        <item>Carpenter</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Driver</item>
        <item>House Keeping</item> 
        <item>Painter</item>   
    </string-array>
    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Register</item>
        <item >Calendar</item>
        <item >Share</item>
        <item >Profile</item>
        <item >Settings</item>
        <item >Facebook</item>
        
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/register</item>
        <item>@drawable/calendar</item>
        <item>@drawable/share</item>
        <item>@drawable/profile</item>
        <item>@drawable/settings_icon</item>
        <item>@drawable/facebook</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
